Take picture & fix baby z-index

--- a/project/src/css/style.css
+++ b/project/src/css/style.css
@@ -31,13 +31,28 @@
   --watermelon-gradient: {
     background: linear-gradient(to right, color(var(--watermelon) a(80%)), color(var(--watermelon) a(60%)), color(var(--watermelon) a(80%)));
   }
+
+  --button: {
+    margin-top: 1.5%;
+    font-family: bloc;
+    font-size: 3rem;
+    position: absolute;
+    border-radius: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 body {
   font-size: 1.6rem;
   font-family: calibri;
   overflow-x: hidden;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
 }
 
 .container {
@@ -148,7 +163,8 @@ body {
   margin: 0;
 
   &-header {
-    margin-top: -5%;
+    transform-origin: center top;
+    margin-top: -10rem;
     margin-bottom: 2%;
     height: 50%;
     width: 100%;
@@ -198,32 +214,87 @@ body {
   }
 
   &-btn {
-    margin-top: 1.5%;
+    @apply --button;
+    z-index: 5;
+    width: 25rem;
+    height: 6rem;
     color: var(--dark-orange);
     background: var(--pompadour);
-    font-family: bloc;
-    /* font-size: 3.6rem; */
-    font-size: 3rem;
-    /* width: 28rem; */
-    width: 25rem;
-    /* height: 7rem; */
-    height: 6rem;
-    border-radius: 1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    &-wrap {
+      width: 25rem;
+      height: 8rem;
+      bottom: 3rem;
+      position: absolute;
+    }
   }
 }
 
+.photo {
+
+  &-take {
+    @apply --button;
+    opacity: 0;
+    left: 0;
+    background: var(--emerald);
+    color: var(--alabaster);
+
+    &-btn {
+      @apply --button;
+      @apply --watermelon-gradient;
+      transform: scale(.2);
+      width: 20rem;
+      height: 7rem;
+      color: var(--vulcan);
+      position: absolute;
+      bottom: 0;
+      box-shadow: 1px 3px 2px var(--vulcan);
+      left: calc(50% - 10.3rem);
+      z-index: 2;
+      opacity: 0;
+    }
+
+    &-done {
+      background: none;
+      box-shadow: none;
+      font-size: 4rem;
+      color: var(--watermelon);
+
+      &:hover {
+        cursor: auto;
+      }
+    }
+  }
+
+  &-upload {
+    @apply --button;
+    opacity: 0;
+    right: 0;
+    background: var(--alabaster);
+    color: var(--emerald);
+  }
+}
+
+.flash {
+  position: absolute;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  top: 0;
+  left: 0;
+}
+
 .baby {
-  /* z-index: -1; */
+  width: 100%;
+  height: 100%;
 
   &-container {
     z-index: 1;
     position: absolute;
     transition-duration: 80ms;
+    width: 85px;
+    height: 190px;
   }
 
   &-wrap {
@@ -232,7 +303,27 @@ body {
     width: 35rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
+  }
+
+  &-face {
+    filter: brightness(110%);
+    position: absolute;
+    top: .5rem;
+    left: .9rem;
+    width: 6.1rem;
+    height: 6.1rem;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &-video {
+    width: 200%;
+    height: 200%;
   }
 }
 
@@ -254,14 +345,12 @@ body {
 }
 
 .intro {
-  /* z-index: 2; */
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-  /* overflow: hidden; */
   position: relative;
 
   &::before {
@@ -282,9 +371,9 @@ body {
   z-index: 5;
 
   &-wrap {
-    /* z-index: 10; */
+    margin: 0 auto;
     position: relative;
-    bottom: 10rem;
+    bottom: 20rem;
     width: 30rem;
     height: 10rem;
     display: flex;
@@ -299,24 +388,28 @@ body {
 }
 
 .pipe {
+  clip-path: polygon(50% 10%, 100% 0, 100% 100%, 0 100%, 0 0);
   width: 100%;
   height: 125vh;
-  margin-top: -10rem;
+  margin-top: -20rem;
+  /* padding-bottom: 20rem; */
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  z-index: -2;
+  z-index: 5;
   position: relative;
 
   &::before {
     @apply --gradient-dark;
     content: '';
     position: absolute;
+    /* bottom: -20rem; */
     width: 100%;
-    height: 150vh;
-    margin-top: -10rem;
-    z-index: -2;
+    height: 100%;
+    /* margin-bottom: -10rem; */
+    bottom: 0;
+    z-index: -1;
   }
 
   &::after {
@@ -451,6 +544,7 @@ body {
     &-right {
       transform: rotateY(180deg);
       margin-left: 5rem;
+      border: 2px solid red;
     }
 
     &-left {
